@@ -205,6 +205,10 @@ receive {
             # Advertise fake authentication support and punish people who try to
             # use it.
             honeypot = false;
+            sasl {
+                # See https://www.cyrusimap.org/sasl/sasl/options.html
+                pwcheck_method = saslauthd;
+            }
             # Override the SASL library's normal determination of the hostname.
             #domain = example.com;
         }
