@@ -12,7 +12,7 @@ struct simta_sasl {
     yastr        s_response;
 };
 
-int                simta_sasl_init(void);
+simta_result       simta_sasl_init(void);
 struct simta_sasl *simta_sasl_server_new(int);
 int  simta_sasl_server_auth(struct simta_sasl *, const char *, const char *);
 void simta_sasl_free(struct simta_sasl *);
