@@ -1,0 +1,15 @@
+receive {
+    mode = global_relay;
+    tls {
+        enabled = true;
+    }
+    auth authn {
+        enabled = true;
+        sasl {
+            pwcheck_method = auxprop;
+            mech_list = LOGIN PLAIN;
+            auxprop_plugin = sasldb;
+        }
+        domain = example.com;
+    }
+}
